p2/configs/app1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app1
  labels:
    app.kubernetes.io/name: app1
spec:
  containers:
  - name: openresty
    image: openresty/openresty:buster-aarch64
    ports:
      - containerPort: 80
        name: app1-http
    volumeMounts:
    - name: nginx-conf
      mountPath: /etc/openresty/nginx.conf
    - name: nginx-default
      mountPath: /etc/nginx/conf.d/default.conf
  volumes:
  - name: nginx-default
    hostPath:
      path: /home/vagrant/configs/default.conf
  - name: nginx-conf
    hostPath:
      path: /home/vagrant/configs/nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: app1
  ports:
  - name: app1-http-svc
    protocol: TCP
    port: 80
    targetPort: app1-http
    nodePort: 30007
