p2/configs/app3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app3
  labels:
    app.kubernetes.io/name: app3
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
      - containerPort: 80
        name: app3-http

---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app.kubernetes.io/name: app3
  ports:
  - name: app3-http-svc
    protocol: TCP
    port: 80
    targetPort: app3-http
